@@ -1,28 +1,35 @@
 package com.thirikkale.userservice.config;
 
 import com.thirikkale.userservice.security.JwtAuthenticationFilter;
-import lombok.RequiredArgsConstructor;
+import com.thirikkale.userservice.security.ServiceAuthFilter;
+// REMOVE Lombok import if not needed
+// import lombok.RequiredArgsConstructor;
+// import org.springframework.beans.factory.annotation.Value; // REMOVE if serviceAuthSecret field is removed
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.AuthenticationProvider;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.http.HttpMethod;
+import org.springframework.security.authentication.AuthenticationProvider; // Keep this
+// REMOVE unused imports
+// import org.springframework.security.authentication.AuthenticationManager;
+// import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+// import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer; // Keep if filterChain uses it
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
+// import org.springframework.security.core.userdetails.UserDetailsService; // REMOVE this import
+// import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder; // REMOVE this import
+// import org.springframework.security.crypto.password.PasswordEncoder; // REMOVE this import
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+// import org.springframework.context.annotation.Lazy; // Can likely remove @Lazy
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -32,12 +39,25 @@ import java.util.Arrays;
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    private final UserDetailsService userDetailsService;
+    private final ServiceAuthFilter serviceAuthFilter;
+    // REMOVE UserDetailsService injection
+    private final AuthenticationProvider authenticationProvider; // Keep this
 
+    // Explicit Constructor
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter,
+                          ServiceAuthFilter serviceAuthFilter,
+                          AuthenticationProvider authenticationProvider) {
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+        this.serviceAuthFilter = serviceAuthFilter;
+        this.authenticationProvider = authenticationProvider;
+    }
+
+    // --- Keep only ONE SecurityFilterChain Bean ---
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http.csrf(AbstractHttpConfigurer::disable)
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(AbstractHttpConfigurer::disable) // Use disable method reference
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(authz -> authz
                         // Authentication endpoints - Allow all
@@ -47,9 +67,9 @@ public class SecurityConfig {
                         .requestMatchers("/api/v1/auth/refresh", "/api/v1/auth/logout").permitAll()
                         .requestMatchers("/api/v1/auth/register").permitAll()
 
-                        // Rider & driver registration AND login - FIXED
-                        .requestMatchers("/api/v1/riders/register", "/api/v1/riders/login").permitAll()
-                        .requestMatchers("/api/v1/drivers/register", "/api/v1/drivers/login").permitAll()
+                        // Rider & driver registration (Public)
+                        .requestMatchers("/api/v1/riders/register").permitAll()
+                        .requestMatchers("/api/v1/drivers/register").permitAll()
 
                         // Admin auth endpoints
                         .requestMatchers("/api/v1/auth/admin/login",
@@ -70,12 +90,16 @@ public class SecurityConfig {
                         .requestMatchers("/uploads/**").permitAll()
 
                         // Public docs & health
-                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-ui.html").permitAll()
-                        .requestMatchers("/actuator/**").permitAll()
+                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/actuator/**").permitAll()
                         .requestMatchers("/health", "/info").permitAll()
 
                         // Error handling
                         .requestMatchers("/error").permitAll()
+
+                        // Specific User Role Access (Examples)
+                        .requestMatchers("/api/v1/admin/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/api/v1/riders/{id}").hasRole("RIDER")
+                        .requestMatchers(HttpMethod.PUT, "/api/v1/drivers/{id}").hasRole("DRIVER")
 
                         // All other requests require authentication
                         .anyRequest().authenticated())
@@ -85,34 +109,31 @@ public class SecurityConfig {
         return http.build();
     }
 
+    // Keep corsConfigurationSource bean - ensure Allowed Methods includes PATCH if needed elsewhere
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOriginPatterns(List.of("*")); // Consider restricting in production
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH")); // Added PATCH
+        configuration.setAllowedHeaders(List.of("*")); // Use List.of("*")
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Total-Count"));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L); // Optional: Set max age
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", configuration); // Apply CORS to all paths
         return source;
     }
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+    // REMOVE serviceAuthSecret field - It's used in ServiceAuthFilter, not directly here
+    // @Value("${service.auth.secret:default-service-secret-12345}")
+    // private String serviceAuthSecret;
 
-    @Bean
-    public AuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(userDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder());
-        return authProvider;
-    }
+    // REMOVE the duplicate filterChain bean method
 
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-        return config.getAuthenticationManager();
-    }
+    // REMOVE passwordEncoder() bean - MOVED to ApplicationConfig
+
+    // REMOVE authenticationProvider() bean - MOVED to ApplicationConfig
+
+    // REMOVE authenticationManager() bean - MOVED to ApplicationConfig
 }
